@@ -1,3 +1,5 @@
+    - Fixed a bug in Bailador::Request:Multipart that caused all parts, but the first one, to contain data from the previous ones
+    - Added method Bailador::Request::Multipart.Num()
     - Fixed a bug that caused error messages never to be colorized
 
 0.0.12 2017.09.09
